--- a/.github/workflows/1st_File.yaml
+++ b/.github/workflows/1st_File.yaml
@@ -7,6 +7,8 @@ jobs:
     name: Testing files
     runs on: ubuntu-latest
     steps:
+      - name: Reading repo files using Actions
+        actions: actions/checkout@v4
       - name: listing the files
         run: ls
       - name: Read the files
