--- a/.github/workflows/1st_File.yaml
+++ b/.github/workflows/1st_File.yaml
@@ -5,7 +5,7 @@ on:
 jobs:
   testing:
     name: Testing files
-    runs on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Reading repo files using Actions
         uses: actions/checkout@v4
