--- a/.github/workflows/5th_RepoVarSec.yaml
+++ b/.github/workflows/5th_RepoVarSec.yaml
@@ -1,6 +1,6 @@
 name: Exploring variables and secrets
 on:
-  push:
+  workflow_dispatch:
 env:
   CONTAINER_REGISTRY: docker.io
   IMAGE_NAME: github-actions-nginx
